--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans' rel='stylesheet' type='text/css'>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     
@@ -24,17 +25,76 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="#about">Work</a></li>
-            <li><a href="#contact">About</a></li>
-            <li><a href="#contact">Resources</a></li>
+            <li class="active"><a href="#projects">Projects</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#thoughts">Thoughts</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container main-container">
-        Katie Womersley
+    <div class="container">
+      
+      <div class="page-header">
+        <h4>My name is</h4>
+        <h1>Katie Womersley</h1>
+        <h4>and I build cool web stuff</h4>
+      </div>
+
+      <div class="section" id="projects">
+        <h2>Projects</h2>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <a href="#" class="thumbnail">
+                <img src="images/captainslog.png" alt="Captains' Log app">
+              </a>
+              <div class="caption">
+                <h3>Title</h3>
+                <p>Description</p>
+                <a href="">Link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <a href="#" class="thumbnail">
+                <img src="images/frogger.png" alt="Frogger game">
+              </a>
+              <div class="caption">
+                <h3>Title</h3>
+                <p>Description</p>
+                <a href="">Link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+              <a href="#" class="thumbnail">
+                <img src="images/sierpinski.png" alt="Sierpinski Triangles ">
+              </a>
+              <div class="caption">
+                <h3>Title</h3>
+                <p>Description</p>
+                <a href="">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section" id="work">
+        <h2>Work</h2>
+      </div>
+
+      <div class="section" id="about">
+        <h2>About Me</h2>
+      </div>
+
+      <div class="section" id="thoughts">
+        <h2>Thoughts</h2>
+      </div>
     </div>
 
     <footer class="footer">
@@ -42,5 +102,5 @@
         <p class="text-muted"><i class="fa fa-github"></i></p>
       </div>
     </footer>
-
   </body>
+</html>
