--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-
           <a class="navbar-brand" href="#">Katie Womersley</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#work">Client Work</a></li>
             <li ><a href="#sites">Sites</a></li>
+            <li><a href="#about">About Me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -46,13 +45,10 @@
       <div class="section" id="about">
         <!--<h2>About Me</h2>-->
           <div class="row">
-            <div class="col-xs-12 col-sm-6">
-              <p>Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end web developer with some experience in PHP and Rails. I get really excited about things like reducing latency and js object creation patterns. Right now I'm an intern at <a href="http://travelground.com">Travelground.com</a> and I do some client work too at my digital agency, <a href="http://dune8.com">Dune8</a>. </p>
-              <p>
-                My first degree is in Philosophy, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything (with dubious aid of boolean logic). I did my MSc in Managerial Economics at the London School of Economics, but broke free from the suit life and taught myself to code because being able to create things out of thoughts is so satisfying (the boolean logic finally helped). It's a great way to combine creativity with logic. My ambition is to be a master builder of the digital world. </p>
-                <p>My motto is "work hard and be nice to people". When I'm offline, I like to be miles from anywhere with everything I need in my backpack (sometimes for days). A good flat white, skiing powder and Christmas rock my world. But most of all, I love to learn.</p>
+            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/Katie-small.jpg"></div>
+            <div class="col-xs-12 col-sm-10">
+              <p>Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end web developer at <a href="http://travelground.com">Travelground.com</a> and I do client work too at my digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns. I also have some experience in PHP and Rails.</p>
             </div>
-            <div class="col-xs-12 col-sm-6"><img src="images/Katie.png" class="img-responsive img-circle"></div>
           </div>
           
         
@@ -194,6 +190,16 @@
           </div>
       </div>
 
+
+      <div class="section" id="about">
+        <h2>A Bit More About Me</h2>
+          <div class="row">
+            <div class="col-xs-12">
+              <p>
+                My first degree is in Philosophy, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything (with dubious aid of boolean logic). I did my MSc in Managerial Economics at the London School of Economics, but broke free from the suit life and taught myself to code because being able to create things out of thoughts is so satisfying (the boolean logic finally helped). It's a great way to combine creativity with logic. My ambition is to be a master builder of the digital world. </p>
+                <p>My motto is "work hard and be nice to people". When I'm offline, I like to be miles from anywhere with everything I need in my backpack (sometimes for days). A good flat white, skiing powder and Christmas rock my world. But most of all, I love to learn.</p>
+            </div>
+          </div>
 
 
     </div>
