new photo, some tweaks

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="section" id="about">
         <!--<h2>About Me</h2>-->
           <div class="row">
-            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/Katie-small.jpg"></div>
+            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/Katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end web developer at <a href="http://travelground.com">Travelground.com</a> and I do client work too at my digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns. I also have experience in PHP and some Rails.</p>
             </div>
@@ -219,8 +219,8 @@
             <p>
               My first degree is in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I did my MSc in Managerial Economics at the London School of Economics, but quickly realised I don't enjoy a structured, corporate environment so I taught myself to code.  I also like languages and am teaching myself German. </p> 
               <p>What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.  </p>
-              <p>My motto is "work hard and be nice to people". A good flat white, skiing powder and Christmas rock my world. But most of all, I love to learn.</p>
-              <p>You can find me on <a href="https://twitter.com/katie_womers">twitter</a> or <a href="">email me.</a></p>  
+              <p>My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing powder and Christmas rock my world. But most of all, I love to learn.</p>
+              <p>You can find me on <a href="https://twitter.com/katie_womers">twitter</a> or <a href="mailto:k.a.womersley@gmail.com">email me.</a></p>  
           </div>
         </div>
       </div>
@@ -230,9 +230,7 @@
         <div class="row">
           <div class="col-xs-12">
               
-                <a href="https://github.com/KatieLo"><i class="fa fa-github"></a></i> <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a> <a href=""><i class="fa fa-linkedin-square"></i></a>
-              
-            <span>email:</span> k.a.womersley@gmail.com 
+                <a href="https://github.com/KatieLo"><i class="fa fa-github"></a></i> <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a> <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a><a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a> k.a.womersley@gmail.com 
           </div>
         </div>
       </div>
