--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="section" id="about">
         <!--<h2>About Me</h2>-->
           <div class="row">
-            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/Katie2.jpg"></div>
+            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end web developer at <a href="http://travelground.com">Travelground.com</a> and I do client work too at my digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns. I also have experience in PHP and some Rails.</p>
             </div>
