--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
-              <a href="http://www.katielouw.com/sites/Frogger/" class="thumbnail" target="_blank">
+              <a href="/sites/Frogger/" class="thumbnail" target="_blank">
                 <img src="images/frogger-small.png" alt="Frogger game">
               </a>
               <div class="caption">
@@ -89,7 +89,7 @@
                 <p class="fine-print">
                   Tools and Skills: Vanilla JS, OO JS, HTML5 Canvas, Audio, CSS3/Html5 only modals
                 </p>
-                <a href="http://www.katielouw.com/sites/Frogger/" target="_blank">Play Frogger!</a>
+                <a href="/sites/Frogger/" target="_blank">Play Frogger!</a>
               </div>
             </div>
           </div>
@@ -170,40 +170,40 @@
   data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
               <div class="thumbnail ">
-                <a href="http://www.katielouw.com/sites/Sierpinski/
+                <a href="/sites/Sierpinski/
 " class="thumbnail">
                   <img src="images/sierpinski.png" alt="Sierpinski Triangles ">
                 </a>
                 <div class="caption">
                   <h3>Sierpinski Triangles</h3>
                   <p>Draws recursive triangles on HTML canvas to create the Sierpinksi fractal pattern.</p>
-                  <a href="http://www.katielouw.com/sites/Sierpinski/
+                  <a href="/sites/Sierpinski/
 ">See Sierpinksi</a>
                 </div>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 item">
               <div class="thumbnail ">
-                <a href="http://www.katielouw.com/sites/Move-Planner/" class="thumbnail">
+                <a href="/sites/Move-Planner/" class="thumbnail">
                   <img src="images/cityexplorer.png" alt="City Explorer">
                 </a>
                 <div class="caption">
                   <h3>City Explorer</h3>
                   <p>Uses Ajax to query the NYTimes, Wikipedia and Google Maps APIs and show images and links related to a street address.</p>
-                  <a href="http://www.katielouw.com/sites/Move-Planner/">See City Explorer</a>
+                  <a href="/sites/Move-Planner/">See City Explorer</a>
                 </div>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 item">
               <div class="thumbnail ">
-                <a href="http://www.katielouw.com/sites/Wedding/
+                <a href="/sites/Wedding/
 " class="thumbnail">
                   <img src="images/wedding.png" alt="Wedding Site">
                 </a>
                 <div class="caption">
                   <h3>Website for my Wedding!</h3>
                   <p>Simple but pretty informational site.</p>
-                  <a href="http://www.katielouw.com/sites/Wedding/
+                  <a href="/sites/Wedding/
 ">See Wedding Site</a>
                 </div>
               </div>
