--- a/index.html
+++ b/index.html
@@ -166,49 +166,44 @@
       <div class="section" id="sites">
         <h2>Sites</h2>
         <p>These are smaller fun sites I've built to hone my craft!</p>
-        <div class="js-masonry"
-  data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
+        <div class="js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
               <div class="thumbnail ">
-                <a href="/sites/Sierpinski/
-" class="thumbnail">
+                <a href="/sites/Sierpinski/" class="thumbnail">
                   <img src="images/sierpinski.png" alt="Sierpinski Triangles ">
                 </a>
                 <div class="caption">
                   <h3>Sierpinski Triangles</h3>
                   <p>Draws recursive triangles on HTML canvas to create the Sierpinksi fractal pattern.</p>
-                  <a href="/sites/Sierpinski/
-">See Sierpinksi</a>
+                  <a href="/sites/Sierpinski/">See Sierpinksi</a>
                 </div>
               </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 item">
-              <div class="thumbnail ">
-                <a href="/sites/Move-Planner/" class="thumbnail">
-                  <img src="images/cityexplorer.png" alt="City Explorer">
-                </a>
-                <div class="caption">
-                  <h3>City Explorer</h3>
-                  <p>Uses Ajax to query the NYTimes, Wikipedia and Google Maps APIs and show images and links related to a street address.</p>
-                  <a href="/sites/Move-Planner/">See City Explorer</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 item">
-              <div class="thumbnail ">
-                <a href="/sites/Wedding/
-" class="thumbnail">
-                  <img src="images/wedding.png" alt="Wedding Site">
-                </a>
-                <div class="caption">
-                  <h3>Website for my Wedding!</h3>
-                  <p>Simple but pretty informational site.</p>
-                  <a href="/sites/Wedding/
-">See Wedding Site</a>
-                </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="/sites/Move-Planner/" class="thumbnail">
+                <img src="images/cityexplorer.png" alt="City Explorer">
+              </a>
+              <div class="caption">
+                <h3>City Explorer</h3>
+                <p>Uses Ajax to query the NYTimes, Wikipedia and Google Maps APIs and show images and links related to a street address.</p>
+                <a href="/sites/Move-Planner/">See City Explorer</a>
               </div>
             </div>
           </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="/sites/Wedding/" class="thumbnail">
+                <img src="images/wedding.png" alt="Wedding Site">
+              </a>
+              <div class="caption">
+                <h3>Website for my Wedding!</h3>
+                <p>Simple but pretty informational site.</p>
+                <a href="/sites/Wedding/">See Wedding Site</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
 
@@ -217,10 +212,17 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My first degree is in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I did my MSc in Managerial Economics at the London School of Economics, but quickly realised I don't enjoy a structured, corporate environment so I taught myself to code.  I also like languages and am teaching myself German. </p> 
-              <p>What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.  </p>
-              <p>My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing powder and Christmas rock my world. But most of all, I love to learn.</p>
-              <p>You can find me on <a href="https://twitter.com/katie_womers">twitter</a> or <a href="mailto:k.a.womersley@gmail.com">email me.</a></p>  
+              My first degree is in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I did my MSc in Managerial Economics at the London School of Economics, but quickly realised I don't enjoy a structured, corporate environment so I taught myself to code.  I also like languages and am teaching myself German. 
+            </p> 
+            <p>
+              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.
+            </p>
+            <p>
+              My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing powder and Christmas rock my world. But most of all, I love to learn.
+            </p>
+            <p>
+              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
+            </p>  
           </div>
         </div>
       </div>
@@ -229,8 +231,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-              
-                <a href="https://github.com/KatieLo"><i class="fa fa-github"></a></i> <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a> <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a><a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a> k.a.womersley@gmail.com 
+                <a href="https://github.com/KatieLo"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a>
+                <a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com 
           </div>
         </div>
       </div>
