--- a/index.html
+++ b/index.html
@@ -192,6 +192,18 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
+              <div class="thumbnail ">
+                <a href="/sites/Hipster-Quiz2.0/" class="thumbnail">
+                  <img src="images/hipster.png" alt="Hipster Quiz">
+                </a>
+                <div class="caption">
+                  <h3>Hipster Quiz</h3>
+                  <p>A dynamic quiz using Javascript objects stored in an array, where a new question is shown each time the user clicks "next", and a final score is displayed after the last question, without reloading the page.</p>
+                  <a href="/sites/Sierpinski/">See Hipster Quiz</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
               <a href="/sites/Wedding/" class="thumbnail">
                 <img src="images/wedding.png" alt="Wedding Site">
