--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
               </div>
             </div>
           </div>
+          <!--
           <div class="col-xs-12 col-sm-6 col-md-4 item">
               <div class="thumbnail ">
                 <a href="/sites/Hipster-Quiz2.0/" class="thumbnail">
@@ -202,7 +203,7 @@
                   <a href="/sites/Sierpinski/">See Hipster Quiz</a>
                 </div>
               </div>
-          </div>
+          </div>-->
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
               <a href="/sites/Wedding/" class="thumbnail">
