add link to blog

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="#work">Client Work</a></li>
             <li ><a href="#sites">Sites</a></li>
             <li><a href="#more-about">About Me</a></li>
+            <li><a href="http://gsvinfinitecuriosity.tumblr.com/">Blog</a></li>
           </ul>
         </div>
       </div>
@@ -225,7 +226,7 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My first degree is in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I did my MSc in Managerial Economics at the London School of Economics, but quickly realised I don't enjoy a structured, corporate environment so I taught myself to code.  I also like languages and am teaching myself German. 
+              My undergrad was in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I then did an MSc in Managerial Economics at the London School of Economics. After graduating I realised the corporate life wasn't for me so I did a u-turn to pursure my own definition of happiness and success and taught myself to code instead.  I also like languages and am teaching myself German. 
             </p> 
             <p>
               What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.
