add chatterbox app to projects

--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
               </div>
             </div>
           </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="/projects/chatterbox/" class="thumbnail" target="_blank">
+                <img src="images/chatterbox-small.png" alt="Chatterbox - anonymous chat with Backbone.js">
+              </a>
+              <div class="caption">
+                <h3>Chatterbox</h3>
+                <p>An anonymous web chat app built with Backbone.js</p>
+                <p class="fine-print">
+                  Backbone.js framework, firebase backend, bower for front-end dependency management
+                </p>
+                <a href="/projects/chatterbox/" target="_blank">Chat!</a>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -112,7 +127,7 @@
                 <h3>Fizantkraal Lodge</h3>
                 <p>This was my first contract project for Dune8. It's a simple static site to showcase the lodge.</p>
                 <p class="fine-print">
-                  Tools and Skills: HTML and CSS, responsive web design, information heirarchy and content writing. 
+                  Tools and Skills: HTML and CSS, responsive web design, information hierarchy and content writing. 
                 </p>
                 <a href="http://fizantakraal.co.za/">Visit Fizantakraal.co.za</a>
               </div>
@@ -127,7 +142,7 @@
                 <h3>Steve Louw Musician Website</h3>
                 <p>This site was designed and built to showcase music and the band's image and allow users to stream and buy music and videos.</p>
 
-                <p class="fine-print">Tools and Skills: PHP backend with SQL databse using prepared statements, HTML and CSS frontend, responsive design, custom music streaming, search and autocomplete for albums, songs and lyrics, npm and grunt for asset pipeline.</p>
+                <p class="fine-print">Tools and Skills: PHP backend with SQL database using prepared statements, HTML and CSS frontend, responsive design, custom music streaming, search and autocomplete for albums, songs and lyrics, npm and grunt for asset pipeline.</p>
                 <a href="http://www.stevelouw.org/">Visit Stevelouw.org</a>
               </div>
             </div>
@@ -140,7 +155,7 @@
               <div class="caption">
                 <h3>Youthinc Consultancy</h3>
                 <p>Youthinc.sa is a custom wordpress site since the site would be changing a lot as the team and projects evolved and everything needed to be editable.</p>
-                <p class="fine-print">Tools and Skills: developing for Wordpress, responsive design, information heirarchy and content writing.
+                <p class="fine-print">Tools and Skills: developing for Wordpress, responsive design, information hierarchy and content writing.
                 </p>
                 <a href="http://www.youthincsa.com/">Visit Youthincsa.com</a>
               </div>
