fix broken link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <div class="section" id="work">
         <h2>Client Work</h2>
-        <p>I run a digital agency, <a href="dune8.com">Dune8.com</a> where I build websites for clients. I also design the sites and help with content strategy. This has taught me so much about managing and communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom Wordpress project to building out a full-stack Rails CMS.</p>
+        <p>Before joining Lekkeslaap full time, I ran a digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about managing and communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom Wordpress project to building out a full-stack Rails CMS.</p>
         <div class="row js-masonry"
   data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
