--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           <div class="row">
             <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
-              <p>Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end web developer at <a href="http://travelground.com">Travelground.com</a> and I do client work too at my digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns. I also have experience in PHP and some Rails.</p>
+              <p>
+                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and it's English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP in the backend or working with APIs to building out the frontend, and sometimes even making product videos and researching new features for our users. 
+              </p>
+              <p>
+                Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns.
+              </p>
             </div>
           </div>
           
@@ -63,7 +68,7 @@
 
       <div class="section" id="projects">
         <h2>Projects</h2>
-        <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that is also sometimes useful!)</p>
+        <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that hopefully is also sometimes useful!)</p>
         <div class="row item-container js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
@@ -241,7 +246,7 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My undergrad was in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I then did an MSc in Managerial Economics at the London School of Economics. After graduating I realised the corporate life wasn't for me so I did a u-turn to pursure my own definition of happiness and success and taught myself to code instead.  I also like languages and am teaching myself German. 
+              My undergrad was in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I then did an MSc in Managerial Economics at the London School of Economics. After graduating I realised the corporate life wasn't for me so I did a u-turn to pursure my own definition of happiness and success and taught myself to code instead (which I love!).  I also like languages and am teaching myself German.
             </p> 
             <p>
               What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.
@@ -250,7 +255,7 @@
               My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing powder and Christmas rock my world. But most of all, I love to learn.
             </p>
             <p>
-              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
+              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting about code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
             </p>  
           </div>
         </div>
